added cardview to tweetlayout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="toolbar_title">#ffffff</color>
     <color name="colorPrimary">#00002B</color>
+    <color name="text">#212121</color>
+
     <color name="colorPrimaryDark">#18093F</color>
     <color name="colorAccent">#FF9800</color>
     <color name="control_normal">#464A69</color>
