--- a/app/src/main/res/layout/tweet_item.xml
+++ b/app/src/main/res/layout/tweet_item.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    app:cardCornerRadius="5dp"
+    android:padding="5dp"
+    android:layout_gravity="center"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="1dp"
-    android:background="?android:colorBackground"
+    android:background="@color/toolbar_title"
     android:orientation="vertical"
     android:padding="@dimen/activity_horizontal_margin">
 
@@ -21,12 +28,15 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_weight="2"
+            android:textColor="@color/colorAccent"
             android:textStyle="bold"
             tools:text="Username" />
 
         <TextView
             android:id="@+id/createdAtTextView"
             android:layout_width="0dp"
+            android:textColor="@color/colorAccent"
+
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="end"
@@ -37,6 +47,7 @@
         android:id="@+id/contentTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/text"
         android:fontFamily="sans-serif-light"
         android:textSize="18sp"
         tools:targetApi="jelly_bean"
@@ -50,3 +61,4 @@
         tools:src="@color/colorAccent" />
 
 </LinearLayout>
+</android.support.v7.widget.CardView>
