--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/searchFragment"
-    android:name="com.ValentineRutto.SearchTwitter.SearchFragment"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    tools:layout="@layout/fragment_search" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent">
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/searchFragment"
+        android:name="com.ValentineRutto.SearchTwitter.SearchFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_search"
+        tools:layout_editor_absoluteX="181dp"
+        tools:layout_editor_absoluteY="160dp" />
 
+    <!--<com.getbase.floatingactionbutton.AddFloatingActionButton-->
+        <!--android:id="@+id/add_reminder"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:clickable="true"-->
+        <!--fab:fab_colorNormal="@color/colorAccent"-->
+        <!--fab:fab_colorPressed="@color/colorAccent"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:layout_marginRight="8dp"/>-->
+
+</RelativeLayout>
