--- a/app/src/main/res/layout/help_view.xml
+++ b/app/src/main/res/layout/help_view.xml
@@ -7,24 +7,18 @@
     android:clickable="true"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:layout_margin="16dp"
-        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/title"
+        android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo"
         android:layout_margin="2dp"
         android:gravity="center"
+        android:textColor="@color/colorAccent"
         android:text="@string/help_title"
-        android:textSize="18sp" />
+        android:textSize="23sp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -32,6 +26,7 @@
         android:layout_below="@+id/title"
         android:layout_margin="2dp"
         android:gravity="center"
+        android:textColor="@color/colorAccent"
         android:text="@string/help_subtitle" />
 
 </RelativeLayout>
